--- a/todo.txt
+++ b/todo.txt
@@ -22,3 +22,4 @@ Learn how to set the max field width dynamically in zig.
 ---------
 Fully switch to the new reader/writer API, do not use the oldreader 
 ---------
+Figure out how to process multi-key commands with modifiers: e.g. 3w
