Add len() fn for the buffer.

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,11 @@
 ---------
-Implement rudimentary search from https://viewsourcecode.org/snaptoken/kilo/06.search.html
+Implement forward/backward search.
+---------
+Return nullable from search so that we could show a status message that nothing is found.
+---------
+Convert search quiery to rx space, e.g if there are tabs
+---------
+TODO: figure out what is the most convenient way of scrolling when searching.
 ---------
 Add the command stack: e.g. in the command mode if the key is not a part of known flow (e.g. w move by word), add those to a stack until we match some command or press esc. I should probably limit this by some amount of chars.
 Display this stack on the status bar. Vim adds it to the message bar, but who cares.
