--- a/todo.txt
+++ b/todo.txt
@@ -3,13 +3,13 @@ Implement forward/backward search.
 ---------
 Show tabs as spaces, do not do weird up to TAB_WIDTH padding.
 ---------
+Editor crashes when we esc-delete from first char of next row and the rows are joined.
+---------
 Return nullable from search so that we could show a status message that nothing is found.
 ---------
 Convert search quiery to rx space, e.g if there are tabs
 ---------
 TODO: figure out what is the most convenient way of scrolling when searching.
----------
-There is something wrong with the boundary check on the bottom most row. Sometimes, I cannot move to the new row, sometimes, I get move one row past it.
 ---------
 Handling text at editor prompt is a big ugly as all keys delete to the right.
 We need to reuse the input handling logic with the rest of the editor. Make prompt just another row???
