Switch to the new reader API.

--- a/todo.txt
+++ b/todo.txt
@@ -1,17 +1,15 @@
 ---------
-Implement forward/backward search.
+Forward/backward search.
 ---------
 Show tabs as spaces, do not do weird up to TAB_WIDTH padding.
 ---------
 Simplify logic of highlight in the visual mode
 ---------
-Editor crashes when we backspace-delete from first char of next row and the rows are joined.
----------
 Return nullable from search so that we could show a status message that nothing is found.
 ---------
 Convert search quiery to rx space, e.g if there are tabs
 ---------
-TODO: figure out what is the most convenient way of scrolling when searching.
+figure out what is the most convenient way of scrolling when searching.
 ---------
 Handling text at editor prompt is a big ugly as all keys delete to the right.
 We need to reuse the input handling logic with the rest of the editor. Make prompt just another row???
@@ -20,12 +18,6 @@ We currently use all unprocessed control characters enter the normal mode. Use o
 ---------
 Rewrite MessageBar properly using the string formatting.
 Learn how to set the max field width dynamically in zig.
----------
-Fully switch to the new reader/writer API, do not use the oldreader 
----------
-Figure out how to process multi-key commands with modifiers: e.g. 3w
----------
-go to 51gg in README, then go to gg, crash
 ---------
 if there's no chance we ever hit any of the branches, clear the command stack
 ---------
