--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,6 @@
+---------
+add a debugging method to print to status line
+---------
 Copy/paste in visual mode, internal register only.
 ---------
 Forward/backward search.
@@ -23,3 +26,7 @@ if there's no chance we ever hit any of the branches, clear the command stack
 add a check when adding a buffer that there is no buffer with this name, and either open the buf, or show a message that you need to save.
 ---------
 Add :ls command.
+---------
+Do not allow to move to the empty space at the end of a line in insert mode.
+---------
+
